spiderweb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiderweb
  labels:
    app: spiderweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spiderweb
  template:
    metadata:
      labels:
        app: spiderweb
    spec:
      serviceAccountName: spiderweb-svc
      containers:
      - name: spiderweb
        image: garybowers/spiderweb:0.54
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
