deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spider
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spider
  name: spiderweb
  labels:
    app: spiderweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spiderweb
  template:
    metadata:
      labels:
        app: spiderweb
    spec:
      serviceAccountName: spiderweb-svc
      containers:
      - name: spiderweb
        image: garybowers/spiderweb:0.23
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spiderweb
  namespace: spider
  labels:
    app: spiderweb
spec:
  selector:
    app: spiderweb
  ports:
  - name: tcp-spiderweb
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spiderweb-vs 
  namespace: default 
spec:
  gateways:
  - ingress-gateway
  hosts:
  - spider.ssp.immersion.dev
  http:
  - match:
    - uri:
        prefix: "/"
    route: 
    - destination:
        host: spiderweb.spider.svc.cluster.local 
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
spec:
  hosts:
  - oauth2.googleapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
